--- a/style.css
+++ b/style.css
@@ -2,4 +2,95 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
+    text-align: center;
+    color: #7E7E7E;
+    background-color: #D4D4D4;
+}
+
+h1 {
+    color: #DD5555;
+    font-weight: 900;
+}
+
+header img {
+    width:200px;
+    height: 200px;
+   border-radius:50%;
+   border: solid #D4D4D4 5px;
+}
+
+header {
+    background-color: white;
+    width: 600px;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    padding-left: 25px;
+    padding-right: 25px;
+    border-radius: 1%;
+}
+
+header a {
+    text-decoration: none;
+    color: white;
+    background-color: #DD5555;
+    width: 8px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 12px;
+    padding-right: 12px;
+    text-align: center;
+    border-radius: 5px;
+    font-weight: 500;
+    }
+
+header p {
+    text-align: justify;
+    font-size: 19px;
+}
+.bold {
+    font-weight: bold;
+}
+
+h2 {
+    font-weight: 600;
+}
+
+ul {
+    background-color: white;
+    width: 600px;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    padding-top: 65px;
+    padding-bottom: 65px;
+    padding-left: 25px;
+    padding-right: 25px;
+    border-radius: 5px;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-around;
+    }
+
+ul li {
+    display: flex;
+    flex-direction: column;
+}
+
+li a {
+    text-decoration: none;
+    color: #D4D4D4;
+}
+
+li i {
+    display: flex;
+    color: #D4D4D4;
+}
+
+.surligne {
+    background-color: #D4D4D4;
 }
