--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 h1 {
     color: #DD5555;
-    font-weight: 900;
+    font-weight: 800;
 }
 
 header img {
@@ -25,12 +25,13 @@ header {
     margin-left: 25%;
     margin-right: 25%;
     margin-top: 2%;
-    margin-bottom: 2%;
+    margin-bottom: 35px;
     padding-top: 25px;
     padding-bottom: 25px;
     padding-left: 25px;
     padding-right: 25px;
     border-radius: 1%;
+    box-shadow: 1px 1px 1px 1px #7E7E7E;
 }
 
 header a {
@@ -38,8 +39,8 @@ header a {
     color: white;
     background-color: #DD5555;
     width: 8px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 12px;
+    padding-bottom: 12px;
     padding-left: 12px;
     padding-right: 12px;
     text-align: center;
@@ -56,7 +57,7 @@ header p {
 }
 
 h2 {
-    font-weight: 600;
+    font-weight: 550;
 }
 
 ul {
@@ -73,7 +74,8 @@ ul {
     border-radius: 5px;
     list-style-type: none;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    box-shadow: 1px 1px 1px 1px #7E7E7E;
     }
 
 ul li {
@@ -84,13 +86,64 @@ ul li {
 li a {
     text-decoration: none;
     color: #D4D4D4;
+    font-size: 20px;
 }
 
 li i {
     display: flex;
     color: #D4D4D4;
+    font-size: 30px;
 }
 
 .surligne {
     background-color: #D4D4D4;
+}
+
+section {
+    background-color: white;
+    width: 600px;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    padding-left: 25px;
+    padding-right: 25px;
+    border-radius: 1%;
+    box-shadow: 1px 1px 1px 1px #7E7E7E;
+}
+
+h3 {
+    font-weight: 600;
+    font-size: 20px;
+}
+
+section img {
+    width: 110px;
+    justify-content: space-around;
+    margin-top: 15px;
+
+}
+
+
+article {
+    display: flex;
+    padding-bottom: 5px;
+    margin-left: 15px;
+    padding-top: 20px;
+}
+
+article p {
+    text-align: justify;
+    font-size: 19px;
+    margin-left: 25px;
+    margin-right: 15px;
+    letter-spacing: -0,5px;
+    font-weight: 400;
+    line-height: 33px;
+}
+
+.info {
+    margin-bottom: 8px;
 }
